--- a/UnPdeC.vcxproj.filters
+++ b/UnPdeC.vcxproj.filters
@@ -42,6 +42,9 @@
     <ClCompile Include="UFunc.cpp">
       <Filter>源文件</Filter>
     </ClCompile>
+    <ClCompile Include="OffsetLog.cpp">
+      <Filter>源文件</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="UnPdeC.h">
@@ -72,6 +75,9 @@
       <Filter>头文件</Filter>
     </ClInclude>
     <ClInclude Include="UFunc.h">
+      <Filter>头文件</Filter>
+    </ClInclude>
+    <ClInclude Include="OffsetLog.h">
       <Filter>头文件</Filter>
     </ClInclude>
   </ItemGroup>
