将luac改名为luac,添加icon

--- a/Tools/UnLuacBAT/UnLuacBAT.vcxproj
+++ b/Tools/UnLuacBAT/UnLuacBAT.vcxproj
@@ -182,6 +182,15 @@
       <TreatOutputAsContent Condition="'$(Configuration)|$(Platform)'=='Release|x64'">true</TreatOutputAsContent>
     </CopyFileToFolders>
   </ItemGroup>
+  <ItemGroup>
+    <ClInclude Include="resource.h" />
+  </ItemGroup>
+  <ItemGroup>
+    <ResourceCompile Include="UnLuacBAT.rc" />
+  </ItemGroup>
+  <ItemGroup>
+    <Image Include="UnLuacBAT.ico" />
+  </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
   </ImportGroup>
