--- a/Tools/UnLuacBAT/UnLuacBAT.vcxproj.filters
+++ b/Tools/UnLuacBAT/UnLuacBAT.vcxproj.filters
@@ -22,4 +22,19 @@
   <ItemGroup>
     <CopyFileToFolders Include="UnLuacGVM.exe" />
   </ItemGroup>
+  <ItemGroup>
+    <ClInclude Include="resource.h">
+      <Filter>头文件</Filter>
+    </ClInclude>
+  </ItemGroup>
+  <ItemGroup>
+    <ResourceCompile Include="UnLuacBAT.rc">
+      <Filter>资源文件</Filter>
+    </ResourceCompile>
+  </ItemGroup>
+  <ItemGroup>
+    <Image Include="UnLuacBAT.ico">
+      <Filter>资源文件</Filter>
+    </Image>
+  </ItemGroup>
 </Project>
