FlagFinder增加查找统计.cache前8字节功能

--- a/Tools/FlagFinder/FlagFinder.vcxproj
+++ b/Tools/FlagFinder/FlagFinder.vcxproj
@@ -150,6 +150,5 @@
     <ClCompile Include="FlagFinder.cpp" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
-  <ImportGroup Label="ExtensionTargets">
-  </ImportGroup>
+  <ImportGroup Label="ExtensionTargets" />
 </Project>
